--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@ title: American Coffee Table Book
           </section>-->
           <section class="plans-section">
             <div class="plans-section__container">
+              <h2 class="services-section__title" data-aos="fade-up">Latest Books</h2>
               <div class="row">
-                <div class="plans-section__item card-price col-12 col-lg-6 col-xl-4" data-aos="fade-up">
+                <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up">
                   <div class="card-price__wrapper">
                     <div class="card-price__plan" data-aos="fade-up">American Coffee Table Book</div>
                     <div class="card-price__price" data-aos="fade-up">
-                      <sup></sup> Available <span> soon</span>
+                      <sup>$</sup> 49.99 <span>Available soon</span>
                     </div>
                     <ul class="card-price__list">
                       <li class="yellow" data-aos="fade-up">8.25" x 10.75"</li>
@@ -113,16 +114,16 @@ title: American Coffee Table Book
                     </a>
                   </div>
                 </div>
-                <div class="plans-section__item card-price card-price--gradient col-12 col-lg-6 col-xl-4" data-aos="fade-up">
+                <div class="plans-section__item card-price card-price--gradient col-12 col-lg-6 col-xl-6" data-aos="fade-up">
                   <div class="card-price__wrapper">
                     <div class="card-price__plan" data-aos="fade-up">Bitcoin Coffee Table Book</div>
                     <div class="card-price__price" data-aos="fade-up">
-                      <sup></sup> Available <span> now</span>
+                      <sup>$</sup> 124.99 <span>Available now</span>
                     </div>
                     <ul class="card-price__list">
                       <li class="yellow" data-aos="fade-up">The Code</li>
                       <li class="yellow" data-aos="fade-up">The Correspondence</li>
-                      <li data-aos="fade-up">And The Paper that started it all.</li>
+                      <li class="yellow" data-aos="fade-up">And The Paper that started it all.</li>
                     </ul>
                     <a class="btn--outline card-price__btn card-price__btn--outline btn" href="#" data-aos="fade-up">
                       <span class="btn__text">Buy Now</span>
