--- a/books/american.html
+++ b/books/american.html
@@ -92,7 +92,7 @@ title: American Coffee Table Book
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="https://www.walmart.com/">Walmart<span>
+                        <a class="services-section__link" href="https://www.walmart.com/">Direct<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
@@ -100,7 +100,7 @@ title: American Coffee Table Book
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="https://www.ingramspark.com/">Direct<span>
+                        <a class="services-section__link" href="https://www.ingramspark.com/"><span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
@@ -130,7 +130,7 @@ title: American Coffee Table Book
             </div>
           </section>
           <div class="single-project__next" data-aos="fade-up">
-            <a href="https://www.amazon.com/" target="_blank">Buy Now
+            <a href="https://www.amazon.com/" target="_blank">Buy On Amazon
               <svg width="104" height="86">
                 <use xlink:href="#arrow-right"></use>
               </svg>
