--- a/books/american.html
+++ b/books/american.html
@@ -84,6 +84,14 @@ title: American Coffee Table Book
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
+                        <a class="services-section__link" href="https://www.ingramspark.com/"><span>
+                            <svg width="24" height="23">
+                              <use xlink:href="#link-arrow2"></use>
+                            </svg>
+                          </span>
+                        </a>
+                      </li>
+                      <li class="services-section__item" data-aos="fade-up">
                         <a class="services-section__link" href="https://www.barnesandnoble.com/">Barnes & Noble<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
@@ -100,7 +108,7 @@ title: American Coffee Table Book
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="https://www.walmart.com/">Direct<span>
+                        <a class="services-section__link" href="#">Your Local Bookstore<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
