--- a/books/american.html
+++ b/books/american.html
@@ -108,7 +108,7 @@ title: American Coffee Table Book
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="#">Your Local Bookstore<span>
+                        <a class="services-section__link" href="#">Local Bookshop<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
