--- a/books/american.html
+++ b/books/american.html
@@ -138,7 +138,7 @@ title: American Coffee Table Book
             </div>
           </section>
           <div class="single-project__next" data-aos="fade-up">
-            <a href="https://www.amazon.com/" target="_blank">Buy On Amazon
+            <a href="https://www.amazon.com/" target="_blank">Buy Now
               <svg width="104" height="86">
                 <use xlink:href="#arrow-right"></use>
               </svg>
