--- a/books/american.html
+++ b/books/american.html
@@ -132,7 +132,7 @@ title: American Coffee Table Book
               <div class="col-12 col-md-6">
                 <div class="project-other__image project-other__image--small" data-aos="fade-up">
                   <img src="{{ '/assets/img/picture/single-project/4.jpg' | relative_url }}" alt="">
-                  <div class="project-other__text" data-aos="fade-up">Featuring three-sided edge-printing, American Coffee Table Book is simply the most beautiful way to celebrate America... on your coffee table.<br>MADE FOR AMERICANS</div>
+                  <div class="project-other__text" data-aos="fade-up">Featuring three-sided edge-printing, American Coffee Table Book is simply the most beautiful way to celebrate America... on your coffee table.<br><br>MADE FOR AMERICANS</div>
                 </div>
               </div>
             </div>
