--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@ title: TABLE books pro
           <section class="creative-hero">
             <div class="creative-hero__container">
               <div class="creative-hero__main">
-                <h1 class="creative-hero__title" style="line-height: 1.1; display: block; text-align: center;">
-                  <!--<span style="display: inline-block; width: 50%;">TABLE</span>
+              <div class="row services-section__main">
+              <div class="col-12 col-xxl-3" data-aos="fade-up">
+                <div class="services-section__text">
+                  American Coffee Table Book is available through a number of retailers. Please try to buy from Barnes And Noble if possible, it helps us to ensure proper bestseller list placement during this period.</div>
+              </div>
+                <!--<h1 class="creative-hero__title" style="line-height: 1.1; display: block; text-align: center;">
+                  <span style="display: inline-block; width: 50%;">TABLE</span>
                   <span style="display: inline-block; width: 50%;">books</span>
-                  <span style="display: inline-block; width: 50%;">pro</span>-->
+                  <span style="display: inline-block; width: 50%;">pro</span>
               </h1>
-                <!--<a class="creative-hero__btn btn" href="#">
+                <a class="creative-hero__btn btn" href="#">
                   span class="btn__text">Join now</span>
                   <span class="btn__icon">
                     <svg width="19" height="19">
                       <use xlink:href="#link-arrow"></use>
                     </svg>
-                  </span>-->
-                </a>
+                  </span>
+                </a>-->
               </div>
               <div class="creative-hero__image">
                 <img src="{{ '/assets/img/picture/creative/table-book-logo.png' | relative_url }}" width="800" height="800" alt="">
