--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: TABLE books pro
         <main>
           <section class="creative-hero">
             <div class="creative-hero__container">
-              <div class="creative-hero__main">
+              <div class="services-section__text">
                 <div class="col-12 col-xxl-3" data-aos="fade-up"></div>
                   <h1 class="creative-hero__title">
                     <span style="display: inline-block; width: 50%;">Hello World</span>
