--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@ title: TABLE books pro
           <section class="creative-hero">
             <div class="creative-hero__container">
               <div class="services-section__text">
-                <div class="col-12 col-xxl-3" data-aos="fade-up"></div>
+                <div class="col-12 col-xxl-3" data-aos="fade-up">
                   <h1 class="creative-hero__title">
                     <span style="display: inline-block; width: 50%;">Hello World</span>
                     <span style="display: inline-block; width: 50%;">books</span>
                     <span style="display: inline-block; width: 50%;">pro</span>
-                </h1>
+                  </h1>
+                </div>
               </div>
                 <div class="creative-hero__image">
                   <img src="{{ '/assets/img/picture/creative/table-book-logo.png' | relative_url }}" width="800" height="800" alt="">
