--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@ title: TABLE books pro
             <div class="creative-hero__container">
               <div class="services-section__text">
                 <div class="col-12 col-xxl-3" data-aos="fade-up">
-                  <h1 class="creative-hero__title">
-                    <span style="display: inline-block; width: 50%;">Hello World</span>
-                    <span style="display: inline-block; width: 50%;">books</span>
-                    <span style="display: inline-block; width: 50%;">pro</span>
-                  </h1>
+                  <h2 class="creative-hero__title">
+                    <span style="display: inline-block; width: 50%;"></span>
+                    <span style="display: inline-block; width: 50%;">A Better</span>
+                    <span style="display: inline-block; width: 50%;">Coffee Table</span>
+                    <span style="display: inline-block; width: 50%;">Book</span>
+                  </h2>
                 </div>
               </div>
                 <div class="creative-hero__image">
