--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ title: TABLE books pro
                   <h2 class="creative-hero__title">
                     <span style="display: inline-block; width: 50%;"></span>
                     <span style="display: inline-block; width: 50%;"></span>
+                    <span style="display: inline-block; width: 50%;"></span>
+                    <span style="display: inline-block; width: 50%;"></span>
                     <span style="display: inline-block; width: 50%;">A</span>
                     <span style="display: inline-block; width: 50%;">Better</span>
                     <span style="display: inline-block; width: 50%;">Coffee</span>
