--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: TABLE books pro
                     <span style="display: inline-block; width: 50%;">Better</span>
                     <span style="display: inline-block; width: 50%;">Coffee</span>
                     <span style="display: inline-block; width: 50%;">Table</span>
-                    <span style="display: inline-block; width: 50%;">Book</span>
+                    <span style="display: inline-block; width: 50%;">Awaits</span>
                   </h2>
                 </div>
               </div>
@@ -176,7 +176,7 @@ title: TABLE books pro
                             </label>
                           </div>
                           <button class="discuss-project__send btn--theme-black btn" type="submit" data-aos="fade-up">
-                            <span class="btn__text">Submit</span>
+                            <span class="btn__text">Not Yet</span>
                             <span class="btn__icon">
                               <svg width="19" height="19">
                                 <use xlink:href="#link-arrow"></use>
