--- a/books/american.html
+++ b/books/american.html
@@ -84,7 +84,7 @@ title: American Coffee Table Book
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="https://www.barnesandnoble.com/">Barnes & Noble<span>
+                        <a class="services-section__link" href="https://www.barnesandnoble.com/">Amazon<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
@@ -92,7 +92,7 @@ title: American Coffee Table Book
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="https://www.amazon.com/">Amazon<span>
+                        <a class="services-section__link" href="https://www.amazon.com/">Barnes & Noble<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
