--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ title: TABLE books pro
                     <span style="display: inline-block; width: 50%;">Awaits</span>
                   </h2>
                 </div>
+                <div class="single-project__hero-text">
+                Independent publisher of unique table books, chapbooks, and more.
+              </div>
               </div>
                 <div class="creative-hero__image">
                   <img src="{{ '/assets/img/picture/creative/table-book-logo.png' | relative_url }}" width="800" height="800" alt="">
