--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: TABLE books pro
           <section class="creative-hero">
             <div class="creative-hero__container">
               <div class="services-section__text">
-                <div class="col-12 col-xxl-3" data-aos="fade-up">
+                <div class="col-12 col-xxl-3" data-aos="fade-right">
                   <h2 class="creative-hero__title">
                     <span style="display: inline-block; width: 50%;"></span>
                     <span style="display: inline-block; width: 50%;"></span>
@@ -21,8 +21,8 @@ title: TABLE books pro
                     <span style="display: inline-block; width: 50%;">Awaits</span>
                   </h2>
                 </div>
-                <div class="single-project__hero-text">
-                Independent publisher of unique table books, chapbooks, and more.
+                <div class="single-project__hero-text data-aos="fade-up" data-aos-duration="50">
+                Independent publisher of unique table books, chapbooks, and more. <br><br>
               </div>
               </div>
                 <div class="creative-hero__image">
