--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@ title: TABLE books pro
                   <h2 class="creative-hero__title">
                     <span style="display: inline-block; width: 50%;"></span>
                     <span style="display: inline-block; width: 50%;"></span>
-                    <span style="display: inline-block; width: 50%;"></span>
                     <span style="display: inline-block; width: 50%;">A</span>
                     <span style="display: inline-block; width: 50%;">Better</span>
                     <span style="display: inline-block; width: 50%;">Coffee</span>
                     <span style="display: inline-block; width: 50%;">Table</span>
-                    <span style="display: inline-block; width: 50%;">Awaits</span>
+                    <span style="display: inline-block; width: 50%;">Book</span>
                   </h2>
                 </div>
-                <div class="single-project__hero-text data-aos="fade-up" data-aos-duration="50">
+                <div class="single-project__hero-text data-aos="fade-up" data-aos-duration="200">
                 Independent publisher of unique table books, chapbooks, and more. <br><br>
               </div>
               </div>
