--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@ title: TABLE books pro
                     <span style="display: inline-block; width: 50%;">Table</span>
                     <span style="display: inline-block; width: 50%;">Book</span>
                   </h2>
-
                 </div>
               </div>
                 <div class="creative-hero__image">
                   <img src="{{ '/assets/img/picture/creative/table-book-logo.png' | relative_url }}" width="800" height="800" alt="">
                 </div>
             </div>
+
+          <div class="single-project__hero row">
+            <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
+
+
+              <div class="single-project__hero-text">
+                “Where liberty dwells, there is my country.” Thought provoking words from Benjamin Franklin. American Coffee Table Book is a salute to America on her 250th anniversary. 500+ pages covering 101 years of America from 1722 - 1823.
+              </div>
+            </div>
+          </div>
           <!--<section class="services-section">
             <div class="services-section__container services-section__container--small">
               <h2 class="services-section__title" data-aos="fade-up">Services</h2>
