--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ title: TABLE books pro
             <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
 
 
-              <div class="single-project__hero-text">
-                “Where liberty dwells, there is my country.” Thought provoking words from Benjamin Franklin. American Coffee Table Book is a salute to America on her 250th anniversary. 500+ pages covering 101 years of America from 1722 - 1823.
+              <div class="single-project__hero-text data-aos="fade-up" data-aos-delay="50">
+                TABLE books pro is an independent publisher of unique table books, chapbooks, and more. Our catalog of titles includes American Coffee Table Book and Bitcoin Coffee Table Book.
               </div>
             </div>
           </div>
