--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: TABLE books pro
             <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
 
 
-              <div class="single-project__hero-text data-aos="fade-up" data-aos-delay="50">
+              <div class="single-project__hero-text" data-aos="fade-up" data-aos-delay="50">
                 TABLE books pro is an independent publisher of unique table books, chapbooks, and more. Our catalog of titles includes American Coffee Table Book and Bitcoin Coffee Table Book.
               </div>
             </div>
