--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ title: TABLE books pro
                 <div class="col-12 col-xxl-3" data-aos="fade-right" data-aos-delay="0">
                   <h2 class="creative-hero__title">
                     <span style="display: inline-block; width: 50%;"></span>
-                    <span style="display: inline-block; width: 50%;">A</span>
+                    <span style="display: inline-block; width: 50%;"></span>
                     <span style="display: inline-block; width: 50%;">Better</span>
                     <span style="display: inline-block; width: 50%;">Coffee</span>
                     <span style="display: inline-block; width: 50%;">Table</span>
-                    <span style="display: inline-block; width: 50%;">Book</span>
+                    <span style="display: inline-block; width: 50%;">Books</span>
                   </h2>
                 </div>
               </div>
