--- a/books/american.html
+++ b/books/american.html
@@ -23,7 +23,7 @@ title: American Coffee Table Book
                 </svg>
               </div>
               <div class="single-project__hero-text">
-                <strong>WHERE LIBERTY DWELLS, THERE IS MY COUNTRY</strong><br><br>American Coffee Table Book is a salute to America on her 250th anniversary. 500+ pages covering 101 years of America from 1722 - 1823.<br><br>An elegantly crafted coffee table book for display. Immerse yourself in the very genesis of the American Revolution. This stunning book showcases America's founding documents through bold, black-and-white stylization inside.<br><br>This elegant hardback combines the timeless words of our founders with original introduction, preface, and editor’s notes offering a fresh perspective on the our country’s cornerstone texts.<br><br> MADE FOR AMERICANS
+                <strong>WHERE LIBERTY DWELLS, THERE IS MY COUNTRY</strong><br><br>American Coffee Table Book is a salute to America on her 250th anniversary. 500+ pages covering 101 years of America from 1722 - 1823.<br><br>An elegantly crafted coffee table book for display. Immerse yourself in the very genesis of the American Revolution. This stunning book showcases America's founding documents through bold, black-and-white stylization inside.<br><br>This elegant hardback combines the timeless words of our founders with original introduction, preface, and editor’s notes offering a fresh perspective on the our country’s cornerstone texts.<br><br><strong>MADE FOR AMERICANS</strong>
               </div>
             </div>
           </div>
