--- a/books/american.html
+++ b/books/american.html
@@ -31,7 +31,7 @@ title: American Coffee Table Book
             <div class="row">
               <div class="col-12 col-lg-4" data-aos="fade-up">
                 <div class="meta__image">
-                  <img src="{{ '/assets/img/picture/single-project/3.jpg' | relative_url }}" alt="">
+                  <img src="{{ '/assets/img/american/3.png' | relative_url }}" alt="">
                 </div>
               </div>
               <div class="col-12 col-lg-8">
