--- a/books/american.html
+++ b/books/american.html
@@ -8,7 +8,7 @@ title: American Coffee Table Book
         <div class="single-project__container container container--size-large">
           <div class="single-project__hero row">
             <div class="single-project__hero-image col-12 col-md-6 col-lg-7 col-xxl-6">
-              <img src="{{ '/assets/img/picture/single-project/5-new.png' | relative_url }}" width="785" alt="project photo">
+              <img src="{{ '/assets/img/american/46.png' | relative_url }}" width="785" alt="project photo">
             </div>
             <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
               <h1 class="single-project__title" style="line-height: 1.1; display: block;">
