--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ title: TABLE books pro
             <div class="plans-section__container">
               <h2 class="services-section__title" data-aos="fade-up">Latest Books</h2>
               <div class="row">
-                <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="background-image: {{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}; background-size: cover; background-position: center; position: relative;">
+                <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: cover; background-position: center; position: relative;">
 
   <style>
     .card-price::before {
