--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ title: TABLE books pro
     .card-price__wrapper {
       position: relative;
       z-index: 2; /* Ensure content is above overlay */
-      background: rgba(255, 255, 255, 1); /* Slightly transparent white background for content */
+      background: rgba(255, 255, 255, .5); /* Slightly transparent white background for content */
       padding: 20px;
       border-radius: 8px;
     }
