--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@ title: TABLE books pro
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.3); /* Semi-transparent dark overlay */
+      background: rgba(0, 0, 0, 0.1); /* Semi-transparent dark overlay */
+      border-radius: 8px; /* Added rounded corners */
       z-index: 1;
     }
     .card-price__wrapper {
