--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@ title: TABLE books pro
                   <div class="card-price__wrapper">
                     <div class="card-price__plan" data-aos="fade-up">American Coffee Table Book</div>
                     <div class="card-price__price" data-aos="fade-up">
-                      <sup>$</sup> 50 <span>Available soon</span>
+                      <sup></sup>  <span></span>
                     </div>
                     <ul class="card-price__list">
-                      <li class="yellow" data-aos="fade-up">8.25" x 10.75"</li>
-                      <li class="yellow" data-aos="fade-up">552 Pages</li>
-                      <li class="yellow" data-aos="fade-up">Made For Americans</li>
+                      <li data-aos="fade-up">"</li>
+                      <li class="yellow" data-aos="fade-up">s</li>
+                      <li class="yellow" data-aos="fade-up"></li>
                     </ul>
                     <a class="card-price__btn btn" href="#" data-aos="fade-up">
-                      <span class="btn__text">Learn More</span>
+                      <span class="btn__text">American Coffee Table Book</span>
                       <span class="btn__icon">
                         <svg width="19" height="19">
                           <use xlink:href="#link-arrow"></use>
