--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ title: TABLE books pro
 
                   <div class="card-price__wrapper">
                     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <a class="card-price__btn btn" href="#" data-aos="fade-up">
+                    <a class="card-price__btn btn" href="{{ '/books/american/' | relative_url }}" data-aos="fade-up">
                       <span class="btn__text">American Coffee Table Book</span>
                       <span class="btn__icon">
                         <svg width="19" height="19">
