--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@ title: TABLE books pro
             <div class="plans-section__container">
               <h2 class="services-section__title" data-aos="fade-up">Latest Books</h2>
               <div class="row">
+                <a href="{{ '/books/american/' | relative_url }}">
                 <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: cover; background-position: center; position: relative;">
+                  </div>
+                  </a>
 
   <style>
     .card-price__wrapper::before {
@@ -123,17 +126,7 @@ title: TABLE books pro
     }
   </style>
 
-                  <div class="card-price__wrapper">
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <a class="card-price__btn btn" href="{{ '/books/american/' | relative_url }}" data-aos="fade-up">
-                      <span class="btn__text">American Coffee Table Book</span>
-                      <span class="btn__icon">
-                        <svg width="19" height="19">
-                          <use xlink:href="#link-arrow"></use>
-                        </svg>
-                      </span>
-                    </a>
-                  </div>
+
                 </div>
                 <div class="plans-section__item card-price card-price--gradient col-12 col-lg-6 col-xl-6" data-aos="fade-up">
                   <div class="card-price__wrapper">
