--- a/index.html
+++ b/index.html
@@ -100,10 +100,7 @@ title: TABLE books pro
             <div class="plans-section__container">
               <h2 class="services-section__title" data-aos="fade-up">Latest Books</h2>
               <div class="row">
-                <a href="{{ '/books/american/' | relative_url }}">
                 <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: cover; background-position: center; position: relative;">
-                  </div>
-                  </a>
 
   <style>
     .card-price__wrapper::before {
@@ -125,8 +122,10 @@ title: TABLE books pro
       border-radius: 8px;
     }
   </style>
-
-
+                  <a href="{{ '/books/american/' | relative_url }}">
+                  <div class="card-price__wrapper">
+                  </a>
+                  </div>
                 </div>
                 <div class="plans-section__item card-price card-price--gradient col-12 col-lg-6 col-xl-6" data-aos="fade-up">
                   <div class="card-price__wrapper">
