--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ title: TABLE books pro
     }
   </style>
                   <a href="{{ '/books/american/' | relative_url }}">
-                  <div class="card-price__wrapper">
+                  <div class="card-price__wrapper" style="height: 200px;">
                   </div>
                   </a>
                 </div>
