--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ title: TABLE books pro
             <div class="plans-section__container">
               <h2 class="services-section__title" data-aos="fade-up">Latest Books</h2>
               <div class="row">
-                <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: cover; background-position: center; position: relative;">
+                <a href="{{ 'books/american/' | relative_url }}"><div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: cover; background-position: center; position: relative; height: 300px;">
 
   <style>
     .card-price__wrapper::before {
@@ -123,11 +123,10 @@ title: TABLE books pro
       border-radius: 8px;
     }
   </style>
-                  <a href="{{ '/books/american/' | relative_url }}">
-                  <div class="card-price__wrapper" style="height: 200px;">
+                  
+                  <div class="card-price__wrapper">
                   </div>
-                  </a>
-                </div>
+                </div></a>
                 <div class="plans-section__item card-price card-price--gradient col-12 col-lg-6 col-xl-6" data-aos="fade-up">
                   <div class="card-price__wrapper">
                     <div class="card-price__plan" data-aos="fade-up">Bitcoin Coffee Table Book</div>
