--- a/index.html
+++ b/index.html
@@ -102,28 +102,8 @@ title: TABLE books pro
               <div class="row">
                 <a href="{{ 'books/american' | relative_url }}"><div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; position: relative; background-repeat: no-repeat;">                  
                 </div></a>
-                
-                <div class="plans-section__item card-price card-price--gradient col-12 col-lg-6 col-xl-6" data-aos="fade-up">
-                  <div class="card-price__wrapper">
-                    <div class="card-price__plan" data-aos="fade-up">Bitcoin Coffee Table Book</div>
-                    <div class="card-price__price" data-aos="fade-up">
-                      <sup>$</sup> 125 <span>Available now</span>
-                    </div>
-                    <ul class="card-price__list">
-                      <li class="yellow" data-aos="fade-up">The Code</li>
-                      <li class="yellow" data-aos="fade-up">The Correspondence</li>
-                      <li class="yellow" data-aos="fade-up">And The Paper that started it all.</li>
-                    </ul>
-                    <a class="btn--outline card-price__btn card-price__btn--outline btn" href="#" data-aos="fade-up">
-                      <span class="btn__text">Buy Now</span>
-                      <span class="btn__icon">
-                        <svg width="19" height="19">
-                          <use xlink:href="#link-arrow"></use>
-                        </svg>
-                      </span>
-                    </a>
-                  </div>
-                </div>
+                <a href="{{ 'books/american' | relative_url }}"><div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; position: relative; background-repeat: no-repeat;">                  
+                </div></a>
               </div>
             </div>
           </section>
