--- a/index.html
+++ b/index.html
@@ -96,17 +96,19 @@ title: TABLE books pro
               </div>
             </div>
           </section>-->
-          <section class="plans-section">
-            <div class="plans-section__container">
-              <h2 class="services-section__title" data-aos="fade-up">Latest Books</h2>
-              <div class="row">
-                <a href="{{ 'books/american' | relative_url }}"><div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; position: relative; background-repeat: no-repeat;">                  
-                </div></a>
-                <a href="{{ 'books/american' | relative_url }}"><div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; position: relative; background-repeat: no-repeat;">                  
-                </div></a>
-              </div>
-            </div>
-          </section>
+<section class="plans-section">
+  <div class="plans-section__container" style="display: flex; flex-wrap: wrap; width: 100%; max-width: 1200px; margin: 0 auto;">
+    <h2 class="services-section__title" data-aos="fade-up">Latest Books</h2>
+    <div class="row" style="width: 100%;">
+      <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
+        <a href="{{ 'books/american' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
+      </div>
+      <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
+        <a href="{{ 'books/american' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
+      </div>
+    </div>
+  </div>
+</section>
           <section class="start-project">
             <div class="start-project__container start-project__container--small">
               <h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Write To Us</h2>
