--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ title: TABLE books pro
       <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
         <a href="{{ 'books/american' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
       </div>
-      <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
-        <a href="{{ 'books/american' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
+      <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/bitcoin-coffee-table-book-2.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
+        <a href="{{ 'books/bitcoin' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
       </div>
     </div>
   </div>
