--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@ title: TABLE books pro
 </section>
           <section class="start-project">
             <div class="start-project__container start-project__container--small">
-              <h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Write To Us</h2>
+              <h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Subscribe</h2>
               <div class="start-project__grid">
+                <iframe src="https://tablebookspro.substack.com/embed" width="100%" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
                 <div class="start-project__discuss discuss-project discuss-project--no-padding">
                   <div class="discuss-project__wrapper" data-aos="fade-up">
                     <form action="#" method="post">
