--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ title: TABLE books pro
           </section>-->
 <section class="plans-section">
   <div class="plans-section__container" style="display: flex; flex-wrap: wrap; width: 100%; max-width: 1200px; margin: 0 auto;">
-    <h2 class="services-section__title" data-aos="fade-up">Latest Books</h2>
+    <h2 class="services-section__title" data-aos="fade-up">Our Books</h2>
     <div class="row" style="width: 100%;">
       <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
         <a href="{{ 'books/american' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
@@ -113,8 +113,8 @@ title: TABLE books pro
             <div class="start-project__container start-project__container--small">
               <h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Subscribe</h2>
               <div class="start-project__grid">
-                <iframe src="https://tablebookspro.substack.com/embed" width="100%" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
-                <div class="start-project__discuss discuss-project discuss-project--no-padding">
+                <iframe src="https://tablebookspro.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+                <!--<div class="start-project__discuss discuss-project discuss-project--no-padding">
                   <div class="discuss-project__wrapper" data-aos="fade-up">
                     <form action="#" method="post">
                       <div class="row justify-content-between gx-0">
@@ -160,7 +160,7 @@ title: TABLE books pro
                       </div>
                     </form>
                   </div>
-                </div>
+                </div>-->
               </div>
             </div>
           </section>
