--- a/books/bitcoin.html
+++ b/books/bitcoin.html
@@ -12,7 +12,7 @@ title: American Coffee Table Book
             </div>
             <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
               <h1 class="single-project__title" style="line-height: 1.1; display: block;">
-                <span style="display: inline-block; width: 50%;">AMERICAN</span>
+                <span style="display: inline-block; width: 50%;">BITCOIN</span>
                 <span style="display: inline-block; width: 50%;">COFFEE</span>
                 <span style="display: inline-block; width: 50%;">TABLE</span>
                 <span style="display: inline-block; width: 50%;">BOOK</span>
@@ -23,11 +23,11 @@ title: American Coffee Table Book
                 </svg>
               </div>
               <div class="single-project__hero-text">
-                <strong>WHERE LIBERTY DWELLS, THERE IS MY COUNTRY</strong><br><br>American Coffee Table Book is a salute to America on her 250th anniversary. 500+ pages covering 101 years of America from 1722 - 1823.<br><br>An elegantly crafted coffee table book for display. Immerse yourself in the very genesis of the American Revolution. This stunning book showcases America's founding documents through bold, black-and-white stylization inside.<br><br>This elegant hardback combines the timeless words of our founders with original introduction, preface, and editor’s notes offering a fresh perspective on the our country’s cornerstone texts.<br><br><strong>MADE FOR AMERICANS</strong>
+                <strong>The Code, The Correspondence, The Paper</strong><br><br>It all started on October 31st 2008, when the pseudonymous Satoshi Nakamoto published a whitepaper called Bitcoin: A Peer-to-Peer Electronic Cash System.<br><br>This elegant hardback combines the timeless words of our founders with original introduction, preface, and editor’s notes offering a fresh perspective on the our country’s cornerstone texts.<br><br>Bitcoin Coffee Table Book: Volume Zero is a 550 page doorstop showcasing the beginnings of Bitcoin. Elegantly designed so that you can immerse yourself and your living space in the very genesis of the Bitcoin revolution.
               </div>
             </div>
           </div>
-          <section class="meta">
+          <!--<section class="meta">
             <div class="row">
               <div class="col-12 col-lg-4" data-aos="fade-up">
                 <div class="meta__image">
@@ -135,7 +135,7 @@ title: American Coffee Table Book
                 <use xlink:href="#arrow-right"></use>
               </svg>
             </a>
-          </div>
+          </div>-->
         </div>
       </article>
     </main>
