--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ title: TABLE books pro
 </section>
           <section class="start-project">
             <div class="start-project__container start-project__container--small">
-              <!--<h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Subscribe</h2>
+              <h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Subscribe</h2>
               <div class="start-project__grid">
                 <div class="start-project__discuss discuss-project discuss-project--no-padding">
                   <div class="discuss-project__wrapper" data-aos="fade-up">
@@ -159,7 +159,7 @@ title: TABLE books pro
                       </div>
                     </form>
                   </div>
-                </div>-->
+                </div>
               </div>
             </div>
           </section>
